Adding all new updates including mail contact form

--- a/public/sass/_buttons.scss
+++ b/public/sass/_buttons.scss
@@ -9,7 +9,7 @@
         font-size: 1.8rem;
         font-weight: 700;
         text-decoration: none;
-        color: black;
+        color: white;
         padding: .5rem 0;
         display: inline-block;
         transition: all .2s;
@@ -29,7 +29,7 @@
         position: relative;
         font-size: 1.8rem;
         font-weight: 700;
-        color: black;
+        color: white;
         padding: .5rem 0;
         transition: all .2s;
         border: none;
@@ -52,7 +52,7 @@
         font-size: 1.8rem;
         font-weight: 700;
         text-decoration: none;
-        color: black;
+        color: white;
         padding: 1rem;
         display: inline-block;
         transition: all .2s;
