--- a/public/css/style.css
+++ b/public/css/style.css
@@ -196,7 +196,22 @@ button {
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%; }
+  font-size: 62.5%;
+  /* @include respond(tab-port) {
+        font-size: 50%; // 1 rem = 8px, 8/16 = 50%
+    }
+
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1 rem = 9px, 9/16 = 56.25%
+    }
+
+    @include respond(tab-land-1260) {
+        font-size: 56.25%; // 1 rem = 9px, 9/16 = 56.25%
+    }
+
+    @include respond(big-desktop) {
+        font-size: 75%; // 1 rem = 12px, 12/16 = 75%
+    }*/ }
   html a, html button, html input[type="submit"] {
     cursor: pointer; }
 
@@ -222,7 +237,7 @@ body {
   font-size: 1.8rem;
   font-weight: 700;
   text-decoration: none;
-  color: black;
+  color: white;
   padding: .5rem 0;
   display: inline-block;
   transition: all .2s;
@@ -251,7 +266,7 @@ body {
   position: relative;
   font-size: 1.8rem;
   font-weight: 700;
-  color: black;
+  color: white;
   padding: .5rem 0;
   transition: all .2s;
   border: none;
@@ -286,7 +301,7 @@ body {
   font-size: 1.8rem;
   font-weight: 700;
   text-decoration: none;
-  color: black;
+  color: white;
   padding: 1rem;
   display: inline-block;
   transition: all .2s;
@@ -310,6 +325,10 @@ body {
   display: flex; }
   .user-nav__list {
     display: flex; }
+    @media only screen and (max-width: 56.25em) {
+      .user-nav__list {
+        width: 100%;
+        justify-content: space-evenly; } }
   .user-nav__link, .user-nav__link:visited, .user-nav__link:link {
     text-decoration: none;
     font-size: 2rem;
@@ -319,6 +338,8 @@ body {
     display: inline-block;
     transition: all .3s;
     color: black; }
+  .user-nav__link--black, .user-nav__link--black:visited, .user-nav__link--black:link {
+    color: white; }
   .user-nav__link--logout, .user-nav__link--logout:visited, .user-nav__link--logout:link {
     text-decoration: none;
     font-size: 2rem;
@@ -336,16 +357,24 @@ body {
     display: block; }
     .user-nav__item:first-child > * {
       padding: 1.7rem 0; }
-    .user-nav__item--yellow {
-      background-color: #ffd000; }
-    .user-nav__item--black {
-      background-color: black; }
     .user-nav__item:hover {
       border-bottom: 3px solid black; }
+    .user-nav__item--black {
+      background-color: #000000; }
+      .user-nav__item--black:hover {
+        border-bottom: 3px solid white; }
     .user-nav__item:hover > .user-nav__link {
       transform: translateY(-0.7rem); }
     .user-nav__item:active > .user-nav__link {
       transform: translateY(0rem); }
+    @media only screen and (max-width: 56.25em) {
+      .user-nav__item {
+        width: 100%;
+        text-align: center; } }
+  @media only screen and (max-width: 56.25em) {
+    .user-nav {
+      margin-top: 2rem;
+      width: 100%; } }
 
 .search {
   flex: 0 0 30%;
@@ -375,7 +404,7 @@ body {
   .search__icon {
     height: 2.25rem;
     width: 2.25rem;
-    fill: #ffd000;
+    fill: rgba(0, 0, 0, 0.7);
     opacity: 1;
     transition: all .3s; }
   .search__input:focus + .search__button > .search__icon {
@@ -384,75 +413,67 @@ body {
 .post_container {
   flex: 0 0 33.33%;
   text-decoration: none;
-  color: black; }
+  color: black;
+  border-bottom: .3rem solid transparent;
+  transition: all .3s; }
+  .post_container:hover {
+    border-bottom: .3rem solid black; }
 
 .post {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
   padding: 1rem; }
+  .post--show {
+    width: 90rem;
+    background-color: #f3f0f0;
+    padding: 4rem;
+    margin: auto; }
   .post__figure {
     margin-bottom: 1rem;
     transition: all .3s;
     overflow: hidden;
     backface-visibility: hidden; }
+    .post__figure--show {
+      margin-bottom: 5rem; }
   .post__image {
     max-width: 100%;
     display: block;
     transition: all .3s;
     backface-visibility: hidden; }
+    .post__image--show {
+      margin: auto;
+      max-width: 60rem; }
   .post__text {
-    border-bottom: .3rem solid transparent;
-    transition: all .3s;
-    padding-bottom: 2rem; }
+    flex: 30%; }
+    .post__text--show {
+      background-color: white;
+      padding: 2rem; }
   .post__title {
-    font-size: 2.3rem;
-    line-height: 1; }
-  .post__date, .post__summary {
-    line-height: 1.6; }
-  .post__date {
-    padding: 1rem 0 0 0;
-    font-size: 1.3rem; }
+    font-size: 2rem;
+    line-height: 1.3;
+    font-weight: 700; }
   .post__summary {
+    line-height: 1.6;
+    padding-top: 2rem;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: 1.6rem; }
-  .post:hover > .post__text {
-    border-bottom: .3rem solid black; }
+  .post__head--headtitle {
+    font-size: 3rem;
+    font-family: Georgia, 'Times New Roman', Times, serif; }
+  .post__head--subtitle {
+    font-size: 1.8rem; }
+  .post__head--nameNdate {
+    margin-top: 1rem;
+    display: inline-block;
+    font-style: italic;
+    font-size: 1.4rem; }
   .post:hover > .post__figure > .post__image {
     transform: scale(1.1); }
-
-.portfolio_container {
-  flex: 0 0 33.33%;
-  text-decoration: none;
-  color: black; }
-
-.portfolio {
-  padding: 1rem;
-  overflow: hidden; }
-  .portfolio__text {
-    border-bottom: .3rem solid transparent;
-    transition: all .3s;
-    padding-bottom: 2rem; }
-  .portfolio__figure {
-    margin-bottom: 1rem;
-    transition: all .3s;
-    overflow: hidden;
-    backface-visibility: hidden; }
-  .portfolio__image {
-    max-width: 100%;
-    display: block;
-    transition: all .3s;
-    backface-visibility: hidden; }
-  .portfolio__title {
-    font-size: 2.3rem;
-    line-height: 1; }
-  .portfolio__date, .portfolio__summary {
-    line-height: 1.6; }
-  .portfolio__date {
-    padding: 1rem 0 0 0;
-    font-size: 1.3rem; }
-  .portfolio__summary {
-    font-size: 1.6rem; }
-  .portfolio:hover > .portfolio__text {
-    border-bottom: .3rem solid black; }
-  .portfolio:hover > .portfolio__figure > .portfolio__image {
-    transform: scale(1.1); }
+  .post--show:hover > .post__text {
+    border-bottom: .3rem solid transparent; }
+  .post--show:hover > .post__figure > .post__image {
+    transform: scale(1); }
 
 .footer__container {
   width: 100%;
@@ -486,15 +507,19 @@ body {
     padding-right: 6rem; }
 
 .content-background {
-  display: block;
+  display: flex;
+  flex-direction: column;
   width: 100%;
+  box-sizing: border-box;
   padding: 2rem;
-  min-height: 14rem;
+  padding-bottom: 8rem;
+  margin-bottom: 4rem;
+  min-height: auto;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 85%);
-  color: black;
+  color: white;
   position: relative;
-  background-color: #ffd000; }
+  background-color: #000000; }
   .content-background__picture {
     position: absolute;
     top: 0;
@@ -505,9 +530,13 @@ body {
     backface-visibility: hidden;
     object-fit: cover;
     z-index: -1; }
+  .content-background--small {
+    min-height: auto;
+    padding-bottom: 4rem;
+    box-sizing: border-box; }
 
 .content-top, .content-middle {
-  color: black; }
+  color: white; }
 
 .content-top__head--headtitle {
   font-size: 2.2rem;
@@ -519,10 +548,11 @@ body {
   font-size: 1.8rem; }
 
 .content-middle {
+  flex: 0 0 70%;
   display: flex;
   justify-content: space-between;
   margin-top: 2rem;
-  margin-bottom: 5rem; }
+  margin-bottom: 2rem; }
   .content-middle__aside {
     flex: 0 0 48%;
     font-size: 1.8rem;
@@ -536,21 +566,31 @@ body {
 .content-bottom {
   margin-top: 2rem;
   display: flex;
-  justify-content: space-between;
   align-items: flex-start;
   padding: 2rem; }
+  @media only screen and (max-width: 71.875em) {
+    .content-bottom {
+      display: block;
+      margin-top: 0rem; } }
   .content-bottom__column {
     flex: 0 0 65%;
     display: flex; }
     .content-bottom__column-headtitle {
       flex: 1;
       margin-right: 2rem; }
+      @media only screen and (max-width: 71.875em) {
+        .content-bottom__column-headtitle {
+          margin-right: 0rem;
+          margin-bottom: 1rem; } }
   .content-bottom__list {
     list-style: none;
     font-weight: 700;
     display: flex;
-    justify-content: flex-start;
+    justify-content: flex-end;
     flex-wrap: wrap; }
+    @media only screen and (max-width: 71.875em) {
+      .content-bottom__list {
+        justify-content: space-around; } }
     .content-bottom__list-item {
       background-color: var(--color-grey-light);
       margin-top: 1rem;
@@ -687,16 +727,39 @@ body {
 .container {
   max-width: 120rem;
   margin: 5rem auto; }
+  @media only screen and (max-width: 78.75em) {
+    .container {
+      font-size: 56.25%;
+      max-width: 120rem;
+      margin: 5rem 3rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .container {
+      font-size: 56.25%;
+      max-width: 100rem;
+      margin: 5rem 3rem; } }
+
+.wrapper--top {
+  padding-top: 2rem;
+  position: fixed;
+  z-index: 100;
+  background-color: white;
+  top: -0px;
+  border-bottom: 3px solid transparent;
+  transition: .4s; }
 
 .header {
   height: auto;
   background-color: white;
+  width: 120rem;
   display: flex;
   justify-content: space-between;
   align-items: center; }
+  @media only screen and (max-width: 56.25em) {
+    .header {
+      flex-direction: column-reverse; } }
 
 .main {
-  padding: 0rem; }
+  margin-top: 19rem; }
 
 .content {
   margin-top: 2rem;
