--- a/public/sass/_base.scss
+++ b/public/sass/_base.scss
@@ -48,6 +48,22 @@ html {
      a, button, input[type="submit"] {
          cursor: pointer;
      }
+
+    /* @include respond(tab-port) {
+        font-size: 50%; // 1 rem = 8px, 8/16 = 50%
+    }
+
+    @include respond(tab-land) {
+        font-size: 56.25%; // 1 rem = 9px, 9/16 = 56.25%
+    }
+
+    @include respond(tab-land-1260) {
+        font-size: 56.25%; // 1 rem = 9px, 9/16 = 56.25%
+    }
+
+    @include respond(big-desktop) {
+        font-size: 75%; // 1 rem = 12px, 12/16 = 75%
+    }*/
 }
 
 body {
