--- a/public/sass/_mixins.scss
+++ b/public/sass/_mixins.scss
@@ -57,3 +57,32 @@
           width: 0%;             
      } 
  }
+
+ @mixin respond($breakpoint) {
+     @if $breakpoint == phone {
+         @media only screen and (max-width: 37.5em) { @content };    //600px
+     } 
+     @if $breakpoint == tab-port {
+         @media only screen and (max-width: 56.25em) { @content };   //900px
+     }
+
+     @if $breakpoint == tab-land-1150 {
+          @media only screen and (max-width: 71.875em) { @content };   //1150px 
+      }
+
+     @if $breakpoint == tab-land {
+         @media only screen and (max-width: 75em) { @content };      //1200px 
+     }
+
+     @if $breakpoint == tab-land-1260 {
+          @media only screen and (max-width: 78.75em) { @content };   //1260px 
+      }
+
+     @if $breakpoint == under-bigdesktop {
+         @media only screen and (max-width: 93em) { @content };      //1485px 
+     }
+     @if $breakpoint == big-desktop {
+         @media only screen and (min-width: 112.5625em) { @content };   //1800px
+     }
+ 
+ }
